Fix button overflow in search tab

--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -30,6 +30,7 @@
 .search {
   display: flex;
   width: 100%;
+  flex-wrap: wrap;
 }
 
 .search input {
